fix: arrange items with z-index

--- a/src/components/AboutModal.css
+++ b/src/components/AboutModal.css
@@ -10,6 +10,7 @@
   text-align: center;
   top: 0;
   width: 100%;
+  z-index: 5;
 }
 .AboutModal__btn-close {
   color: white;
