--- a/src/components/FAB.css
+++ b/src/components/FAB.css
@@ -5,5 +5,5 @@
   position: fixed;
   right: 1em;
   text-shadow: none;
-  z-index: 999;
+  z-index: 3;
 }
